Fixed buttons from disappearing on smaller windows and darkmode  "Go to card" button

--- a/cardDatabase/static/css/view_decklist.css
+++ b/cardDatabase/static/css/view_decklist.css
@@ -301,7 +301,7 @@ button.close.modal-close-btn {
     position: relative;
     display: block;
     margin: auto;
-    min-height: 40vh;
+    min-height: 310px;
 }
 
 .draw-testhand-actions {
